Add component generator

--- a/generators/store/actions.js.hbs
+++ b/generators/store/actions.js.hbs
@@ -1,4 +1,4 @@
-import { SET_VALUE } from 'store/{{ name }}/constants';
+import { SET_VALUE } from 'store/{{ camelCase name }}/constants';
 
 const setValue = (value) => ({
   type: SET_VALUE,
