--- a/generators/store/selector.js.hbs
+++ b/generators/store/selector.js.hbs
@@ -1,10 +1,10 @@
 import { createSelector } from 'reselect';
 import get from 'lodash/fp/get';
 
-const select{{ ucFirst name }} = get('{{ name }}');
+const select{{ properCase name }} = get('{{ camelCase name }}');
 
 const makeSelectValue = () => createSelector(
-  select{{ ucFirst name }},
+  select{{ properCase name }},
   get('value'),
 );
 
