--- a/generators/store/reducer.js.hbs
+++ b/generators/store/reducer.js.hbs
@@ -1,12 +1,12 @@
 import set from 'lodash/fp/set';
 import flow from 'lodash/fp/flow';
-import { SET_VALUE } from 'store/{{ name }}/constants';
+import { SET_VALUE } from 'store/{{ camelCase name }}/constants';
 
 const initialState = {
   value: '',
 };
 
-const {{ name }} = (state = initialState, action) => {
+const {{ camelCase name }} = (state = initialState, action) => {
   switch (action.type) {
     case SET_VALUE:
       return flow(
@@ -17,4 +17,4 @@ const {{ name }} = (state = initialState, action) => {
   }
 };
 
-export default {{ name }};
+export default {{ camelCase name }};
