--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,9 @@ border-spacing: 0;
 
 body {
   font-family: 'Open Sans', sans-serif;
-  background: #203248;
-  color: white;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
